--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -139,11 +139,11 @@
                 </div>
                 <div class="list-item flexrow">
                     <span>Clip: </span>
-                    
-                        <input class="clip-current" type="text" value="{{actor.wornGear.leftHand.data.clip.value}}" name="actor.wornGear.leftHand.data.clip.value" data-item-id="{{actor.wornGear.leftHand._id}}" data-dtype="Number">
-                        <span> / </span>
-                        <span>{{actor.wornGear.leftHand.data.clip.max}}</span>
-                    
+
+                    <input class="clip-current" type="text" value="{{actor.wornGear.leftHand.data.clip.value}}" name="actor.wornGear.leftHand.data.clip.value" data-item-id="{{actor.wornGear.leftHand._id}}" data-dtype="Number">
+                    <span> / </span>
+                    <span>{{actor.wornGear.leftHand.data.clip.max}}</span>
+
                 </div>
                 <div class="list-item">
                     <span>Reload: {{actor.wornGear.leftHand.data.reload.value}}</span>
@@ -239,11 +239,11 @@
                 </div>
                 <div class="list-item flexrow">
                     <span>Clip: </span>
-                    
-                        <input class="clip-current" type="text" value="{{actor.wornGear.rightHand.data.clip.value}}" name="actor.wornGear.rightHand.data.clip.value" data-item-id="{{actor.wornGear.rightHand._id}}" data-dtype="Number">
-                        <span> / </span>
-                        <span>{{actor.wornGear.rightHand.data.clip.max}}</span>
-                    
+
+                    <input class="clip-current" type="text" value="{{actor.wornGear.rightHand.data.clip.value}}" name="actor.wornGear.rightHand.data.clip.value" data-item-id="{{actor.wornGear.rightHand._id}}" data-dtype="Number">
+                    <span> / </span>
+                    <span>{{actor.wornGear.rightHand.data.clip.max}}</span>
+
                 </div>
                 <div class="list-item">
                     <span>Reload: {{actor.wornGear.rightHand.data.reload.value}}</span>
@@ -376,6 +376,7 @@
 
                             <span>Head</span>
                             <span>(1-10)</span>
+                            <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.head.cover" value="{{data.characterHitLocations.head.cover}}" data-dtype="Number"/>
                             <span title="Armor">{{data.characterHitLocations.head.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.head.value}}</span>
                         </div>
@@ -386,6 +387,7 @@
 
                             <span>Left Arm</span>
                             <span>(21-30)</span>
+                            <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.lArm.cover" value="{{data.characterHitLocations.lArm.cover}}" data-dtype="Number"/>
                             <span title="Armor">{{data.characterHitLocations.lArm.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.lArm.value}}</span>
                         </div>
@@ -393,6 +395,7 @@
 
                             <span>Body</span>
                             <span>(31-70)</span>
+                            <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.body.cover" value="{{data.characterHitLocations.body.cover}}" data-dtype="Number"/>
                             <span title="Armor">{{data.characterHitLocations.body.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.body.value}}</span>
                         </div>
@@ -400,6 +403,7 @@
 
                             <span>Right Arm</span>
                             <span>(11-20)</span>
+                            <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.rArm.cover" value="{{data.characterHitLocations.rArm.cover}}" data-dtype="Number"/>
                             <span title="Armor">{{data.characterHitLocations.rArm.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.rArm.value}}</span>
                         </div>
@@ -410,6 +414,7 @@
 
                             <span>Left Leg</span>
                             <span>(71-85)</span>
+                            <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.lLeg.cover" value="{{data.characterHitLocations.lLeg.cover}}" data-dtype="Number"/>
                             <span title="Armor" >{{data.characterHitLocations.lLeg.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.lLeg.value}}</span>
                         </div>
@@ -417,6 +422,7 @@
 
                             <span>Right Leg</span>
                             <span>(86-100)</span>
+                            <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.rLeg.cover" value="{{data.characterHitLocations.rLeg.cover}}" data-dtype="Number"/>
                             <span title="Armor" >{{data.characterHitLocations.rLeg.armor}}</span>
                             <span title="Total Soak">{{data.characterHitLocations.rLeg.value}}</span>
                         </div>
