--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -108,117 +108,117 @@
 
     </div>
     <div class="flexrow">
-                <a class="item-create button" data-type="rangedWeapon" title="Add a Ranged Weapon">Add ranged weapon</a>
-                <a class="item-create button" data-type="meleeWeapon" title="Add a Melee Weapon">Add melee weapon</a>
+        <a class="item-create button" data-type="rangedWeapon" title="Add a Ranged Weapon">Add ranged weapon</a>
+        <a class="item-create button" data-type="meleeWeapon" title="Add a Melee Weapon">Add melee weapon</a>
+    </div>
+
+    <div>
+        {{#each actor.meleeWeapons}}
+        <div class="weapons grid grid-4col">
+            <div class="list-item">
+                <span>Name: {{this.name}}</span>
             </div>
 
-            <div>
-                {{#each actor.meleeWeapons}}
-                <div class="weapons grid grid-4col">
-                    <div class="list-item">
-                        <span>Name: {{this.name}}</span>
-                    </div>
-
-                    <div class="list-item">
-                        <span>Reach: {{this.data.range.value}}</span>
-                    </div>
-                    <div class="list-item">
-                        <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-weapon="this._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
-                    </div>
-                    <div class="list-item">
-                        <span>Damage: </span>
-                        <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}+{{../data.characteristics.s.bonus}}</a>
-                    </div>
-                    <div class="list-item">
-                        <span>Penetration: {{this.data.pen.value}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Special: {{this.data.special.value}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Damage Type: {{this.data.damageType.value}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Weapon Class: {{this.data.class.value}}</span>
-
-
-                    </div>
-                    <div class="list-item">
-                        <span>Weapon Type: {{this.data.type.value}}</span>
-
-
-                    </div>
-                    <div class="list-item flexrow">
-                        <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
-                            <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
-                    </div>
-                </div>
-               
-                {{/each}}
-                {{#each actor.rangedWeapons}}
-                <div class="weapons grid grid-4col">
-                    <div class="list-item">
-                        <span>Name: {{this.name}}</span>
-                    </div>
-
-                    <div class="list-item">
-                        <span>Range: {{this.data.range.value}}</span>
-                    </div>
-                    <div class="list-item">
-                        <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-weapon="this._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
-                    </div>
-                    <div class="list-item">
-                        <span>Damage: </span>
-                        <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Penetration: {{this.data.pen.value}}</span>
-
-                    </div>
-                    <div class="list-item flexrow">
-                        <span>Clip: </span>
-
-                        <input class="clip-current" type="text" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
-                        <span> / </span>
-                        <span>{{this.data.clip.max}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Reload: {{this.data.reload.value}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Special: {{this.data.special.value}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Damage Type: {{this.data.damageType.value}}</span>
-
-                    </div>
-                    <div class="list-item">
-                        <span>Weapon Class: {{this.data.class.value}}</span>
-
-
-                    </div>
-                    <div class="list-item">
-                        <span>Weapon Type: {{this.data.type.value}}</span>
-
-
-                    </div>
-                    <div class="list-item flexrow">
-                        <span>
-                        <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
-                        <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
-                            </span>
-                    </div>
-
-                </div>
-                {{/each}}
+            <div class="list-item">
+                <span>Reach: {{this.data.range.value}}</span>
             </div>
+            <div class="list-item">
+                <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-weapon="this._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
+            </div>
+            <div class="list-item">
+                <span>Damage: </span>
+                <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}+{{../data.characteristics.s.bonus}}</a>
+            </div>
+            <div class="list-item">
+                <span>Penetration: {{this.data.pen.value}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Special: {{this.data.special.value}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Damage Type: {{this.data.damageType.value}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Weapon Class: {{this.data.class.value}}</span>
+
+
+            </div>
+            <div class="list-item">
+                <span>Weapon Type: {{this.data.type.value}}</span>
+
+
+            </div>
+            <div class="list-item flexrow">
+                <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
+                <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
+            </div>
+        </div>
+
+        {{/each}}
+        {{#each actor.rangedWeapons}}
+        <div class="weapons grid grid-4col">
+            <div class="list-item">
+                <span>Name: {{this.name}}</span>
+            </div>
+
+            <div class="list-item">
+                <span>Range: {{this.data.range.value}}</span>
+            </div>
+            <div class="list-item">
+                <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-weapon="this._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
+            </div>
+            <div class="list-item">
+                <span>Damage: </span>
+                <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
+
+            </div>
+            <div class="list-item">
+                <span>Penetration: {{this.data.pen.value}}</span>
+
+            </div>
+            <div class="list-item flexrow">
+                <span>Clip: </span>
+
+                <input class="clip-current" type="text" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
+                <span> / </span>
+                <span>{{this.data.clip.max}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Reload: {{this.data.reload.value}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Special: {{this.data.special.value}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Damage Type: {{this.data.damageType.value}}</span>
+
+            </div>
+            <div class="list-item">
+                <span>Weapon Class: {{this.data.class.value}}</span>
+
+
+            </div>
+            <div class="list-item">
+                <span>Weapon Type: {{this.data.type.value}}</span>
+
+
+            </div>
+            <div class="list-item flexrow">
+                <span>
+                    <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
+                    <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
+                </span>
+            </div>
+
+        </div>
+        {{/each}}
+    </div>
     <div class="grid grid-2col">
 
         <div class="flexcol">
@@ -272,6 +272,7 @@
 
                                 <span>Head</span>
                                 <span>(1-10)</span>
+                                <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.head.cover" value="{{data.characterHitLocations.head.cover}}" data-dtype="Number"/>
                                 <input type="text" name="data.characterHitLocations.head.armor" value="{{data.characterHitLocations.head.armor}}" title="Armor">
                                 <span title="Total Soak">{{data.characterHitLocations.head.value}}</span>
                             </div>
@@ -282,6 +283,7 @@
 
                                 <span>Left Arm</span>
                                 <span>(21-30)</span>
+                                <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.lArm.cover" value="{{data.characterHitLocations.lArm.cover}}" data-dtype="Number"/>
                                 <input type="text" name="data.characterHitLocations.lArm.armor" value="{{data.characterHitLocations.lArm.armor}}" title="Armor">
                                 <span title="Total Soak">{{data.characterHitLocations.lArm.value}}</span>
                             </div>
@@ -289,6 +291,7 @@
 
                                 <span>Body</span>
                                 <span>(31-70)</span>
+                                <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.body.cover" value="{{data.characterHitLocations.body.cover}}" data-dtype="Number"/>
                                 <input type="text" name="data.characterHitLocations.body.armor" value="{{data.characterHitLocations.body.armor}}" title="Armor">
                                 <span title="Total Soak">{{data.characterHitLocations.body.value}}</span>
                             </div>
@@ -296,6 +299,7 @@
 
                                 <span>Right Arm</span>
                                 <span>(11-20)</span>
+                                <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.rArm.cover" value="{{data.characterHitLocations.rArm.cover}}" data-dtype="Number"/>
                                 <input type="text" name="data.characterHitLocations.rArm.armor" value="{{data.characterHitLocations.rArm.armor}}" title="Armor">
                                 <span title="Total Soak">{{data.characterHitLocations.rArm.value}}</span>
                             </div>
@@ -306,6 +310,7 @@
 
                                 <span>Left Leg</span>
                                 <span>(71-85)</span>
+                                <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.lLeg.cover" value="{{data.characterHitLocations.lLeg.cover}}" data-dtype="Number"/>
                                 <input type="text" name="data.characterHitLocations.lLeg.armor" value="{{data.characterHitLocations.lLeg.armor}}" title="Armor">
                                 <span title="Total Soak">{{data.characterHitLocations.lLeg.value}}</span>
                             </div>
@@ -313,6 +318,7 @@
 
                                 <span>Right Leg</span>
                                 <span>(86-100)</span>
+                                <input type="text" class="combat-resources" title="cover" name="data.characterHitLocations.rLeg.cover" value="{{data.characterHitLocations.rLeg.cover}}" data-dtype="Number"/>
                                 <input type="text" name="data.characterHitLocations.rLeg.armor" value="{{data.characterHitLocations.rLeg.armor}}" title="Armor">
                                 <span title="Total Soak">{{data.characterHitLocations.rLeg.value}}</span>
                             </div>
@@ -322,7 +328,7 @@
             </div>
         </div>
         <div class="flexcol npcskillntraits">
-            
+
             <div>
                 <span class="section-title">Equipment</span>
                 {{editor content=data.equipment.value target="data.equipment.value" button=true owner=owner editable=editable}}
