--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -133,6 +133,8 @@
     border-style:inset;
     border-color:dimgray;
     border-width: medium;
+    padding:5px;
+    display:grid;
 }
 
 .flex-between {
