--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -86,8 +86,9 @@
             <div class="flexrow">
                 <div class="flexcol">
                     <span>Left Hand</span>
-                    <select class="hand-weapon" data-hand="left" name="data.secChar.wornGear.leftHand._id">
-                        {{#select data.secChar.wornGear.leftHand._id}}
+                    <select class="hand-weapon" data-hand="left" name="data.secChar.wornGear.weapons.0">
+                        
+                        {{#select data.secChar.wornGear.weapons.[0]}}
                         <option value="">None</option>
                         {{#each actor.meleeWeapons}}
                         <option value="{{this._id}}">{{this.name}}</option>
@@ -100,8 +101,8 @@
                 </div>
                 <div class="flexcol">
                     <span>Right Hand</span>
-                    <select class="hand-weapon" data-hand="right" name="data.secChar.wornGear.rightHand._id">
-                        {{#select data.secChar.wornGear.rightHand._id}}
+                    <select class="hand-weapon" data-hand="right" name="data.secChar.wornGear.weapons.1">
+                        {{#select data.secChar.wornGear.weapons.[1]}}
                         <option value="">None</option>
                         {{#each actor.meleeWeapons}}
                         <option value="{{this._id}}">{{this.name}}</option>
@@ -114,56 +115,60 @@
                 </div>
 
             </div>
-
-            {{#unless (compareString data.secChar.wornGear.leftHand._id)}}
-            {{#if (contains actor.wornGear.leftHand.type "ranged")}}
+            
+            {{#unless (compareString data.secChar.wornGear.weapons.[0])}}
+            {{#if (contains actor.wornGear.weapons.[0].type "ranged")}}
             <div class="weapons grid grid-2col">
                 <div class="list-item">
-                    <span>Name: {{actor.wornGear.leftHand.name}}</span>
+                    <span>Name: {{actor.wornGear.weapons.[0].name}}</span>
                 </div>
 
                 <div class="list-item">
-                    <span>Range: {{actor.wornGear.leftHand.data.range.value}}</span>
+                    <span>Range: {{actor.wornGear.weapons.[0].data.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{data.characteristics.bs.total}}" data-item-id="actor.wornGear.leftHand._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
+                    <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{data.characteristics.bs.total}}" data-item-id="actor.wornGear.weapons.0._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
                 </div>
+                
                 <div class="list-item">
                     <span>Damage: </span>
-                    <a class="damage-roll button" data-label="{{actor.wornGear.leftHand.name}}"data-formula="{{actor.wornGear.leftHand.data.damageFormula.value}}" data-weapon="{{actor.wornGear.leftHand._id}}"> {{actor.wornGear.leftHand.data.damageFormula.value}}</a>
+                    <a class="damage-roll button" data-label="{{actor.wornGear.weapons.[0].name}}"data-formula="{{actor.wornGear.weapons.[0].data.damageFormula.value}}" data-weapon="{{actor.wornGear.weapons.[0]._id}}"> {{actor.wornGear.weapons.[0].data.damageFormula.value}}</a>
 
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{actor.wornGear.leftHand.data.pen.value}}</span>
+                    <span>Penetration: {{actor.wornGear.weapons.[0].data.pen.value}}</span>
 
+                </div>
+                <div class="list-item">
+                    <label>Rate of Fire: {{actor.wornGear.weapons.[0].data.rof.[0].value}}/{{actor.wornGear.weapons.[0].data.rof.[1].value}}/{{actor.wornGear.weapons.[0].data.rof.[2].value}}</label>
                 </div>
                 <div class="list-item flexrow">
                     <span>Clip: </span>
 
-                    <input class="clip-current" type="text" value="{{actor.wornGear.leftHand.data.clip.value}}" name="actor.wornGear.leftHand.data.clip.value" data-item-id="{{actor.wornGear.leftHand._id}}" data-dtype="Number">
+                    <input class="clip-current" type="text" value="{{actor.wornGear.weapons.[0].data.clip.value}}" name="actor.wornGear.weapons.0.data.clip.value" data-item-id="{{actor.wornGear.weapons.[0]._id}}" data-dtype="Number">
                     <span> / </span>
-                    <span>{{actor.wornGear.leftHand.data.clip.max}}</span>
+                    <span>{{actor.wornGear.weapons.[0].data.clip.max}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Reload: {{actor.wornGear.leftHand.data.reload.value}}</span>
+                    <span>Reload: {{actor.wornGear.weapons.[0].data.reload.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Special: {{actor.wornGear.leftHand.data.special.value}}</span>
+                    <span>Special: {{actor.wornGear.weapons.[0].data.special.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{actor.wornGear.leftHand.data.damageType.value}}</span>
+                    <span>Damage Type: {{actor.wornGear.weapons.[0].data.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{actor.wornGear.leftHand.data.class.value}}</span>
+                    <span>Weapon Class: {{actor.wornGear.weapons.[0].data.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{actor.wornGear.leftHand.data.type.value}}</span>
+                    <span>Weapon Type: {{actor.wornGear.weapons.[0].data.type.value}}</span>
 
 
                 </div>
@@ -173,38 +178,38 @@
             {{else}}
             <div class="weapons grid grid-2col">
                 <div class="list-item">
-                    <span>Name: {{actor.wornGear.leftHand.name}}</span>
+                    <span>Name: {{actor.wornGear.weapons.[0].name}}</span>
                 </div>
 
                 <div class="list-item">
-                    <span>Reach: {{actor.wornGear.leftHand.data.range.value}}</span>
+                    <span>Reach: {{actor.wornGear.weapons.[0].data.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{data.characteristics.ws.total}}" data-item-id="actor.wornGear.leftHand._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
+                    <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{data.characteristics.ws.total}}" data-item-id="actor.wornGear.weapons.0._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
                 </div>
                 <div class="list-item">
                     <span>Damage: </span>
-                    <a class="damage-roll button" data-label="{{actor.wornGear.leftHand.name}}"data-formula="{{actor.wornGear.leftHand.data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{actor.wornGear.leftHand._id}}"> {{actor.wornGear.leftHand.data.damageFormula.value}}+{{data.characteristics.s.bonus}}</a>
+                    <a class="damage-roll button" data-label="{{actor.wornGear.weapons.[0].name}}"data-formula="{{actor.wornGear.weapons.[0].data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{actor.wornGear.weapons.[0]._id}}"> {{actor.wornGear.weapons.[0].data.damageFormula.value}}+{{data.characteristics.s.bonus}}</a>
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{actor.wornGear.leftHand.data.pen.value}}</span>
+                    <span>Penetration: {{actor.wornGear.weapons.[0].data.pen.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Special: {{actor.wornGear.leftHand.data.special.value}}</span>
+                    <span>Special: {{actor.wornGear.weapons.[0].data.special.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{actor.wornGear.leftHand.data.damageType.value}}</span>
+                    <span>Damage Type: {{actor.wornGear.weapons.[0].data.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{actor.wornGear.leftHand.data.class.value}}</span>
+                    <span>Weapon Class: {{actor.wornGear.weapons.[0].data.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{actor.wornGear.leftHand.data.type.value}}</span>
+                    <span>Weapon Type: {{actor.wornGear.weapons.[0].data.type.value}}</span>
 
 
                 </div>
@@ -214,56 +219,59 @@
             {{/if}}
             {{/unless}}
 
-            {{#unless (compareString data.secChar.wornGear.rightHand._id)}}
-            {{#unless (compareString data.secChar.wornGear.rightHand._id data.secChar.wornGear.leftHand._id)}}
-            {{#if (contains actor.wornGear.rightHand.type "ranged")}}
+            {{#unless (compareString data.secChar.wornGear.weapons.[1])}}
+            {{#unless (compareString data.secChar.wornGear.weapons.[1] data.secChar.wornGear.weapons.[0])}}
+            {{#if (contains actor.wornGear.weapons.[1].type "ranged")}}
             <div class="weapons grid grid-2col">
                 <div class="list-item">
-                    <span>Name: {{actor.wornGear.rightHand.name}}</span>
+                    <span>Name: {{actor.wornGear.weapons.[1].name}}</span>
                 </div>
 
                 <div class="list-item">
-                    <span>Range: {{actor.wornGear.rightHand.data.range.value}}</span>
+                    <span>Range: {{actor.wornGear.weapons.[1].data.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{data.characteristics.bs.total}}" data-item-id="actor.wornGear.rightHand._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
+                    <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{data.characteristics.bs.total}}" data-item-id="actor.wornGear.weapons.[1]._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
                 </div>
                 <div class="list-item">
                     <span>Damage: </span> 
-                    <a class="damage-roll button" data-label="{{actor.wornGear.rightHand.name}}"data-formula="{{actor.wornGear.rightHand.data.damageFormula.value}}" data-weapon="{{actor.wornGear.rightHand._id}}"> {{actor.wornGear.rightHand.data.damageFormula.value}}</a>
+                    <a class="damage-roll button" data-label="{{actor.wornGear.weapons.[1].name}}"data-formula="{{actor.wornGear.weapons.[1].data.damageFormula.value}}" data-weapon="{{actor.wornGear.weapons.[1]._id}}"> {{actor.wornGear.weapons.[1].data.damageFormula.value}}</a>
 
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{actor.wornGear.rightHand.data.pen.value}}</span>
+                    <span>Penetration: {{actor.wornGear.weapons.[1].data.pen.value}}</span>
 
+                </div>
+                <div class="list-item">
+                    <label>Rate of Fire: {{actor.wornGear.weapons.[1].data.rof.[0].value}}/{{actor.wornGear.weapons.[1].data.rof.[1].value}}/{{actor.wornGear.weapons.[1].data.rof.[2].value}}</label>
                 </div>
                 <div class="list-item flexrow">
                     <span>Clip: </span>
 
-                    <input class="clip-current" type="text" value="{{actor.wornGear.rightHand.data.clip.value}}" name="actor.wornGear.rightHand.data.clip.value" data-item-id="{{actor.wornGear.rightHand._id}}" data-dtype="Number">
+                    <input class="clip-current" type="text" value="{{actor.wornGear.weapons.[1].data.clip.value}}" name="actor.wornGear.weapons.1.data.clip.value" data-item-id="{{actor.wornGear.weapons.[1]._id}}" data-dtype="Number">
                     <span> / </span>
-                    <span>{{actor.wornGear.rightHand.data.clip.max}}</span>
+                    <span>{{actor.wornGear.weapons.[1].data.clip.max}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Reload: {{actor.wornGear.rightHand.data.reload.value}}</span>
+                    <span>Reload: {{actor.wornGear.weapons.[1].data.reload.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Special: {{actor.wornGear.rightHand.data.special.value}}</span>
+                    <span>Special: {{actor.wornGear.weapons.[1].data.special.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{actor.wornGear.rightHand.data.damageType.value}}</span>
+                    <span>Damage Type: {{actor.wornGear.weapons.[1].data.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{actor.wornGear.rightHand.data.class.value}}</span>
+                    <span>Weapon Class: {{actor.wornGear.weapons.[1].data.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{actor.wornGear.rightHand.data.type.value}}</span>
+                    <span>Weapon Type: {{actor.wornGear.weapons.[1].data.type.value}}</span>
 
 
                 </div>
@@ -273,38 +281,38 @@
             {{else}}
             <div class="weapons grid grid-2col">
                 <div class="list-item">
-                    <span>Name: {{actor.wornGear.rightHand.name}}</span>
+                    <span>Name: {{actor.wornGear.weapons.[1].name}}</span>
                 </div>
 
                 <div class="list-item">
-                    <span>Reach: {{actor.wornGear.rightHand.data.range.value}}</span>
+                    <span>Reach: {{actor.wornGear.weapons.[1].data.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{data.characteristics.ws.total}}" data-item-id="actor.wornGear.rightHand._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
+                    <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{data.characteristics.ws.total}}" data-item-id="actor.wornGear.weapons.[1]._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
                 </div>
                 <div class="list-item">
                     <span>Damage: </span>
-                    <a class="damage-roll button" data-label="{{actor.wornGear.rightHand.name}}"data-formula="{{actor.wornGear.rightHand.data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{actor.wornGear.rightHand._id}}"> {{actor.wornGear.rightHand.data.damageFormula.value}}+{{data.characteristics.s.bonus}}</a>
+                    <a class="damage-roll button" data-label="{{actor.wornGear.weapons.[1].name}}"data-formula="{{actor.wornGear.weapons.[1].data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{actor.wornGear.weapons.[1]._id}}"> {{actor.wornGear.weapons.[1].data.damageFormula.value}}+{{data.characteristics.s.bonus}}</a>
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{actor.wornGear.rightHand.data.pen.value}}</span>
+                    <span>Penetration: {{actor.wornGear.weapons.[1].data.pen.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Special: {{actor.wornGear.rightHand.data.special.value}}</span>
+                    <span>Special: {{actor.wornGear.weapons.[1].data.special.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{actor.wornGear.rightHand.data.damageType.value}}</span>
+                    <span>Damage Type: {{actor.wornGear.weapons.[1].data.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{actor.wornGear.rightHand.data.class.value}}</span>
+                    <span>Weapon Class: {{actor.wornGear.weapons.[1].data.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{actor.wornGear.rightHand.data.type.value}}</span>
+                    <span>Weapon Type: {{actor.wornGear.weapons.[1].data.type.value}}</span>
                 </div>
 
             </div>
